--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,7 @@ textarea {
 /* Your basic container, which we'll use over and over*/
 
 .container {
-	max-width: 960px; /*max width will be 960px; if viewport is <960px, the container will shrink */
+	max-width: 960px; max width will be 960px; if viewport is <960px, the container will shrink 
 	width: 100%;
 	margin: 0 auto;   /*keep elements inside horizontally centered*/
 	clear: both;
@@ -111,8 +111,8 @@ textarea {
 /* Main Content Containers and other styles */
 .main-content-container {
   float: left;
-  width: 100%;
-  max-width: 650px;
+  /*width: 100%;*/
+  width: 650px;
   padding: 20px 30px 30px 30px;
   margin: 0 0 40px;
   background: #ffffff;
@@ -138,8 +138,8 @@ textarea {
 
 .sidebar {
   float: right;
-  width: 100%;
-  max-width: 270px;
+  /*width: 100%;*/
+  width: 270px;
   padding: 30px;
   margin-bottom: 20px;
   background: #ffffff;
@@ -279,27 +279,53 @@ input[type=submit]:hover {
 /* Here are the @media screen tags for the Responsive homework*/
 
 @media screen and (max-width: 980px) {
+    .container {
+      width: 100%;
+    }
+    .spacer-container {
+      width: 100%;
+    }
+    .main-content-container {
+      width: 200px;
+    }
+    .sidebar {
+      width: 33%;
+    }
 
 }
 
 @media screen and (max-width: 768px) {
-  .sidebar {
-  float: left;
-  width: 100%;
-  max-width: 270px;
-  padding: 30px;
-  margin-bottom: 20px;
-  background: #ffffff;
-  border: 1px solid #dddddd;
-}
+      .sidebar {
+        float: left;
+        width: 95%;
+        margin-left: 15px;
+        margin-right: auto;
+        margin-top: 0px;
+        margin-bottom: 30px;
+      }
 
-.container {
-  max-width: 720px; 
-  width: 100%;
-  margin: 0 auto;   /*keep elements inside horizontally centered*/
-  clear: both;
-}
+    .container {
+        clear: both;
+        width: 100%;
+    }
 
+    .main-content-container {
+      width: 95%;
+      float: left;
+      margin-left: 15px;
+      margin-right: auto;
+      margin-top: 0px;
+      margin-bottom: 30px;
+    }
+
+    #logo {
+      margin-left: 15px;
+    }
+
+    nav {
+      margin-right: 15px;
+    }
+    
 }
 
 @media screen and (max-width: 640px) {
