--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/* Formatting for Elements; Includes the @media screen tags*/
+/* Formatting for Elements*/
 
 * {
   box-sizing: border-box;
@@ -101,7 +101,7 @@ textarea {
 /* Your basic container, which we'll use over and over*/
 
 .container {
-	max-width: 960px; max width will be 960px; if viewport is <960px, the container will shrink 
+	max-width: 960px; /*max width will be 960px; if viewport is <960px, the container will shrink */
 	width: 100%;
 	margin: 0 auto;   /*keep elements inside horizontally centered*/
 	clear: both;
@@ -111,8 +111,8 @@ textarea {
 /* Main Content Containers and other styles */
 .main-content-container {
   float: left;
-  /*width: 100%;*/
-  width: 650px;
+  width: 100%;
+  max-width: 650px;
   padding: 20px 30px 30px 30px;
   margin: 0 0 40px;
   background: #ffffff;
@@ -138,8 +138,8 @@ textarea {
 
 .sidebar {
   float: right;
-  /*width: 100%;*/
-  width: 270px;
+  width: 100%;
+  max-width: 270px;
   padding: 30px;
   margin-bottom: 20px;
   background: #ffffff;
@@ -164,7 +164,6 @@ textarea {
 .social-image {
   width: 60px;
   height: 60px;
-  max-width: 100%;
   margin-top: 8px;
   margin-right: 0px;
   margin-bottom: 0px;
@@ -220,6 +219,7 @@ textarea {
   color: #ffffff;
   background: #ffffff;
   border-bottom: 2px solid #cccccc;
+  z-index: 99;
 }
 
 #logo {
@@ -232,6 +232,7 @@ textarea {
   text-decoration: none;
   background: #4aaaa5;
   margin-left: 0px;
+  z-index: 99;
 }
 
 #logo h2 {
@@ -249,7 +250,6 @@ textarea {
 #hulme-picture {
   float: left;
   width: 200px;
-  max-width: 100%;
   height: auto;
   margin-top: 10px;
   margin-right: 25px;
@@ -275,29 +275,11 @@ textarea {
 input[type=submit]:hover {
     background-color: #45a049;
 }
-/*---------------------------------------------------------------------*/
-/* Here are the @media screen tags for the Responsive homework*/
-
-@media screen and (max-width: 980px) {
-    .container {
-      width: 100%;
-    }
-    .spacer-container {
-      width: 100%;
-    }
-    .main-content-container {
-      width: 200px;
-    }
-    .sidebar {
-      width: 33%;
-    }
-
-}
 
 @media screen and (max-width: 768px) {
       .sidebar {
         float: left;
-        width: 95%;
+        max-width: 95%;
         margin-left: 15px;
         margin-right: auto;
         margin-top: 0px;
@@ -310,7 +292,7 @@ input[type=submit]:hover {
     }
 
     .main-content-container {
-      width: 95%;
+      max-width: 95%;
       float: left;
       margin-left: 15px;
       margin-right: auto;
@@ -325,9 +307,19 @@ input[type=submit]:hover {
     nav {
       margin-right: 15px;
     }
+
+    .portfolio-item {
+        position: relative;
+        float: left;
+      
+        margin: 20px 0 25px;
+        overflow: auto;
+    }
     
 }
 
 @media screen and (max-width: 640px) {
   
 }
+
+
