--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,7 @@ textarea {
   width: 100%;
   height: 40px;
   margin-bottom: 5px;
+  border: 1px solid #e7e6e6;
 }
 
 textarea {
@@ -267,14 +268,16 @@ textarea {
   margin-bottom: 10px;
 }
 
-/*---------------------------------------------------------------------*/
-
 
 /* From the w3schools website*/
 /* When moving the mouse over the submit button, add a darker green color */
 input[type=submit]:hover {
     background-color: #45a049;
 }
+/*---------------------------------------------------------------------*/
+/* Media Queries*/
+
+/*---------------------------------------------------------------------*/
 
 
 @media screen and (max-width: 768px) {
